src/antlr_parser/GramParser.py
# Generated from Gram.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GramParser ( Parser ):

    grammarFileName = "Gram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'connect'", "'to'", "'list'", 
                     "'select'", "'from'", "'where'", "'count'", "'exists'", 
                     "'('", "')'", "','", "'-'", "'->'", "'_'", "'.'", "'id'", 
                     "'='", "'|'", "'*'", "'+'", "'?'" ]

    symbolicNames = [ "<INVALID>", "DIV", "CONNECT", "TO", "LIST", "SELECT", 
                      "FROM", "WHERE", "COUNT", "EXISTS", "L", "R", "PAR", 
                      "SUB", "RARR", "UNDERLINE", "DOT", "ID", "EQ", "ALT", 
                      "STAR", "PLUS", "QUEST", "STRING", "IDENT", "INT", 
                      "NT", "WS" ]

    RULE_full_script = 0
    RULE_script = 1
    RULE_statement = 2
    RULE_select = 3
    RULE_obj = 4
    RULE_unit = 5
    RULE_where_expr = 6
    RULE_vert_expr = 7
    RULE_named_pattern = 8
    RULE_pattern = 9
    RULE_alt = 10
    RULE_seq = 11
    RULE_subseq = 12
    RULE_scoped = 13

    ruleNames =  [ "full_script", "script", "statement", "select", "obj", 
                   "unit", "where_expr", "vert_expr", "named_pattern", "pattern", 
                   "alt", "seq", "subseq", "scoped" ]

    EOF = Token.EOF
    DIV=1
    CONNECT=2
    TO=3
    LIST=4
    SELECT=5
    FROM=6
    WHERE=7
    COUNT=8
    EXISTS=9
    L=10
    R=11
    PAR=12
    SUB=13
    RARR=14
    UNDERLINE=15
    DOT=16
    ID=17
    EQ=18
    ALT=19
    STAR=20
    PLUS=21
    QUEST=22
    STRING=23
    IDENT=24
    INT=25
    NT=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Full_scriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def script(self):
            return self.getTypedRuleContext(GramParser.ScriptContext,0)


        def EOF(self):
            return self.getToken(GramParser.EOF, 0)

        def getRuleIndex(self):
            return GramParser.RULE_full_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFull_script" ):
                listener.enterFull_script(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFull_script" ):
                listener.exitFull_script(self)




    def full_script(self):

        localctx = GramParser.Full_scriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_full_script)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.script()
            self.state = 29
            self.match(GramParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(GramParser.StatementContext,0)


        def DIV(self):
            return self.getToken(GramParser.DIV, 0)

        def script(self):
            return self.getTypedRuleContext(GramParser.ScriptContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = GramParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_script)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramParser.CONNECT, GramParser.LIST, GramParser.SELECT, GramParser.NT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.statement()
                self.state = 32
                self.match(GramParser.DIV)
                self.state = 33
                self.script()
                pass
            elif token in [GramParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONNECT(self):
            return self.getToken(GramParser.CONNECT, 0)

        def TO(self):
            return self.getToken(GramParser.TO, 0)

        def STRING(self):
            return self.getToken(GramParser.STRING, 0)

        def LIST(self):
            return self.getToken(GramParser.LIST, 0)

        def select(self):
            return self.getTypedRuleContext(GramParser.SelectContext,0)


        def named_pattern(self):
            return self.getTypedRuleContext(GramParser.Named_patternContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GramParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramParser.CONNECT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.match(GramParser.CONNECT)
                self.state = 39
                self.match(GramParser.TO)
                self.state = 40
                self.match(GramParser.STRING)
                pass
            elif token in [GramParser.LIST]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(GramParser.LIST)
                pass
            elif token in [GramParser.SELECT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.select()
                pass
            elif token in [GramParser.NT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.named_pattern()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(GramParser.SELECT, 0)

        def obj(self):
            return self.getTypedRuleContext(GramParser.ObjContext,0)


        def FROM(self):
            return self.getToken(GramParser.FROM, 0)

        def STRING(self):
            return self.getToken(GramParser.STRING, 0)

        def WHERE(self):
            return self.getToken(GramParser.WHERE, 0)

        def where_expr(self):
            return self.getTypedRuleContext(GramParser.Where_exprContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)




    def select(self):

        localctx = GramParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(GramParser.SELECT)
            self.state = 47
            self.obj()
            self.state = 48
            self.match(GramParser.FROM)
            self.state = 49
            self.match(GramParser.STRING)
            self.state = 50
            self.match(GramParser.WHERE)
            self.state = 51
            self.where_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unit(self):
            return self.getTypedRuleContext(GramParser.UnitContext,0)


        def COUNT(self):
            return self.getToken(GramParser.COUNT, 0)

        def EXISTS(self):
            return self.getToken(GramParser.EXISTS, 0)

        def getRuleIndex(self):
            return GramParser.RULE_obj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj" ):
                listener.enterObj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj" ):
                listener.exitObj(self)




    def obj(self):

        localctx = GramParser.ObjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_obj)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramParser.L, GramParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.unit()
                pass
            elif token in [GramParser.COUNT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(GramParser.COUNT)
                self.state = 55
                self.unit()
                pass
            elif token in [GramParser.EXISTS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.match(GramParser.EXISTS)
                self.state = 57
                self.unit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L(self):
            return self.getToken(GramParser.L, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(GramParser.IDENT)
            else:
                return self.getToken(GramParser.IDENT, i)

        def PAR(self):
            return self.getToken(GramParser.PAR, 0)

        def R(self):
            return self.getToken(GramParser.R, 0)

        def getRuleIndex(self):
            return GramParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)




    def unit(self):

        localctx = GramParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unit)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramParser.L]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(GramParser.L)
                self.state = 61
                self.match(GramParser.IDENT)
                self.state = 62
                self.match(GramParser.PAR)
                self.state = 63
                self.match(GramParser.IDENT)
                self.state = 64
                self.match(GramParser.R)
                pass
            elif token in [GramParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(GramParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L(self, i:int=None):
            if i is None:
                return self.getTokens(GramParser.L)
            else:
                return self.getToken(GramParser.L, i)

        def vert_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.Vert_exprContext)
            else:
                return self.getTypedRuleContext(GramParser.Vert_exprContext,i)


        def R(self, i:int=None):
            if i is None:
                return self.getTokens(GramParser.R)
            else:
                return self.getToken(GramParser.R, i)

        def SUB(self):
            return self.getToken(GramParser.SUB, 0)

        def pattern(self):
            return self.getTypedRuleContext(GramParser.PatternContext,0)


        def RARR(self):
            return self.getToken(GramParser.RARR, 0)

        def getRuleIndex(self):
            return GramParser.RULE_where_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_expr" ):
                listener.enterWhere_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_expr" ):
                listener.exitWhere_expr(self)




    def where_expr(self):

        localctx = GramParser.Where_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_where_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(GramParser.L)
            self.state = 69
            self.vert_expr()
            self.state = 70
            self.match(GramParser.R)
            self.state = 71
            self.match(GramParser.SUB)
            self.state = 72
            self.pattern()
            self.state = 73
            self.match(GramParser.RARR)
            self.state = 74
            self.match(GramParser.L)
            self.state = 75
            self.vert_expr()
            self.state = 76
            self.match(GramParser.R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Vert_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(GramParser.IDENT, 0)

        def UNDERLINE(self):
            return self.getToken(GramParser.UNDERLINE, 0)

        def DOT(self):
            return self.getToken(GramParser.DOT, 0)

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def EQ(self):
            return self.getToken(GramParser.EQ, 0)

        def INT(self):
            return self.getToken(GramParser.INT, 0)

        def getRuleIndex(self):
            return GramParser.RULE_vert_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVert_expr" ):
                listener.enterVert_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVert_expr" ):
                listener.exitVert_expr(self)




    def vert_expr(self):

        localctx = GramParser.Vert_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vert_expr)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(GramParser.IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(GramParser.UNDERLINE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.match(GramParser.IDENT)
                self.state = 81
                self.match(GramParser.DOT)
                self.state = 82
                self.match(GramParser.ID)
                self.state = 83
                self.match(GramParser.EQ)
                self.state = 84
                self.match(GramParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Named_patternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT(self):
            return self.getToken(GramParser.NT, 0)

        def EQ(self):
            return self.getToken(GramParser.EQ, 0)

        def pattern(self):
            return self.getTypedRuleContext(GramParser.PatternContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_named_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_pattern" ):
                listener.enterNamed_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_pattern" ):
                listener.exitNamed_pattern(self)




    def named_pattern(self):

        localctx = GramParser.Named_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_named_pattern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(GramParser.NT)
            self.state = 88
            self.match(GramParser.EQ)
            self.state = 89
            self.pattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alt(self):
            return self.getTypedRuleContext(GramParser.AltContext,0)


        def ALT(self):
            return self.getToken(GramParser.ALT, 0)

        def pattern(self):
            return self.getTypedRuleContext(GramParser.PatternContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)




    def pattern(self):

        localctx = GramParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pattern)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.alt()
                self.state = 92
                self.match(GramParser.ALT)
                self.state = 93
                self.pattern()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.alt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AltContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seq(self):
            return self.getTypedRuleContext(GramParser.SeqContext,0)


        def L(self):
            return self.getToken(GramParser.L, 0)

        def R(self):
            return self.getToken(GramParser.R, 0)

        def getRuleIndex(self):
            return GramParser.RULE_alt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlt" ):
                listener.enterAlt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlt" ):
                listener.exitAlt(self)




    def alt(self):

        localctx = GramParser.AltContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_alt)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.seq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(GramParser.L)
                self.state = 100
                self.match(GramParser.R)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SeqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subseq(self):
            return self.getTypedRuleContext(GramParser.SubseqContext,0)


        def seq(self):
            return self.getTypedRuleContext(GramParser.SeqContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq" ):
                listener.enterSeq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeq" ):
                listener.exitSeq(self)




    def seq(self):

        localctx = GramParser.SeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_seq)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.subseq()
                self.state = 104
                self.seq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.subseq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubseqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scoped(self):
            return self.getTypedRuleContext(GramParser.ScopedContext,0)


        def STAR(self):
            return self.getToken(GramParser.STAR, 0)

        def PLUS(self):
            return self.getToken(GramParser.PLUS, 0)

        def QUEST(self):
            return self.getToken(GramParser.QUEST, 0)

        def getRuleIndex(self):
            return GramParser.RULE_subseq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubseq" ):
                listener.enterSubseq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubseq" ):
                listener.exitSubseq(self)




    def subseq(self):

        localctx = GramParser.SubseqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_subseq)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.scoped()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.scoped()
                self.state = 111
                self.match(GramParser.STAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.scoped()
                self.state = 114
                self.match(GramParser.PLUS)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.scoped()
                self.state = 117
                self.match(GramParser.QUEST)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScopedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(GramParser.IDENT, 0)

        def NT(self):
            return self.getToken(GramParser.NT, 0)

        def L(self):
            return self.getToken(GramParser.L, 0)

        def pattern(self):
            return self.getTypedRuleContext(GramParser.PatternContext,0)


        def R(self):
            return self.getToken(GramParser.R, 0)

        def getRuleIndex(self):
            return GramParser.RULE_scoped

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScoped" ):
                listener.enterScoped(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScoped" ):
                listener.exitScoped(self)




    def scoped(self):

        localctx = GramParser.ScopedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_scoped)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(GramParser.IDENT)
                pass
            elif token in [GramParser.NT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(GramParser.NT)
                pass
            elif token in [GramParser.L]:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(GramParser.L)
                self.state = 124
                self.pattern()
                self.state = 125
                self.match(GramParser.R)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





